--- a/index.html
+++ b/index.html
@@ -34,19 +34,76 @@
     <section class="home">
     </section>
     <div style="height: 1000px">
+<ol></ol>
+    <h1 style="text-align:center;">Categorie</h1>
 
-			<h2 class="myH2">Chi siamo</h2>
-			
-			<p class="myP">I HOPE YOU FIND THIS USEFULL</p>
-				<p class="myP">
-				
-				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum ratione facere animi impedit rem labore sint repellendus ipsa sapiente voluptatem aut excepturi quo itaque, ab earum cumque. Voluptatem beatae id inventore quod voluptate qui deserunt, quis placeat, tempora ex totam, dolore sequi harum eos voluptatibus animi labore officiis minus laboriosam
-				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum ratione facere animi impedit rem labore sint repellendus ipsa sapiente voluptatem aut excepturi quo itaque, ab earum cumque. Voluptatem beatae id inventore quod voluptate qui deserunt, quis placeat, tempora ex totam, dolore sequi harum eos voluptatibus animi labore officiis minus laboriosam
-				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum ratione facere animi impedit rem labore sint repellendus ipsa sapiente voluptatem aut excepturi quo itaque, ab earum cumque. Voluptatem beatae id inventore quod voluptate qui deserunt, quis placeat, tempora ex totam, dolore sequi harum eos voluptatibus animi labore officiis minus laboriosam
-				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum ratione facere animi impedit rem labore sint repellendus ipsa sapiente voluptatem aut excepturi quo itaque, ab earum cumque. Voluptatem beatae id inventore quod voluptate qui deserunt, quis placeat, tempora ex totam, dolore sequi harum eos voluptatibus animi labore officiis minus laboriosam
-				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum ratione facere animi impedit rem labore sint repellendus ipsa sapiente voluptatem aut excepturi quo itaque, ab earum cumque. Voluptatem beatae id inventore quod voluptate qui deserunt, quis placeat, tempora ex totam, dolore sequi harum eos voluptatibus animi labore officiis minus laboriosam
-			</p>
+        <div class="container text-center">
+            <div class="row">
+              <div class="col">
+                <div class="card">
+                    <img src="https://arcaplanet.vtexassets.com/assets/vtex.file-manager-graphql/images/e99a4ccc-16c0-4aee-b225-9806d5ab3250___74fbfe6fd680fd01384c278c72143188.jpg" alt="Avatar" style="width:100%">
+                    <div class="container-fluid">
+                      <h4><b>Cane</b></h4>
+                    </div>
+                  </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                    <img src="https://arcaplanet.vtexassets.com/assets/vtex.file-manager-graphql/images/9f2f22b1-f463-4984-97fe-9b6c7b73139f___bf6ec318bdfca3e7045dff24cb6bbf74.jpg" alt="Avatar" style="width:100%">
+                    <div class="container-fluid">
+                      <h4><b>Gatto</b></h4>
+                    </div>
+                  </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                    <img src="https://arcaplanet.vtexassets.com/assets/vtex.file-manager-graphql/images/1a91545b-cdd6-4ea3-bab3-1d72240e72aa___6b22f39aa40b1fa583ee7956e85c8732.jpg" alt="Avatar" style="width:100%">
+                    <div class="container-fluid">
+                      <h4><b>Pesci</b></h4>
+                    </div>
+                  </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                    <img src="https://arcaplanet.vtexassets.com/assets/vtex.file-manager-graphql/images/1e58e360-5800-4955-a363-db975e35dbbd___f84f28ed56d8db27f8209eedae071fae.jpg" alt="Avatar" style="width:100%">
+                    <div class="container-fluid">
+                      <h4><b>Uccelli</b></h4>
+                    </div>
+                  </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                    <img src="https://arcaplanet.vtexassets.com/assets/vtex.file-manager-graphql/images/06f66c82-7997-4168-bf20-dc0f08ce54fa___6aa3f303d5f44283f8fd33a9f1a014bf.jpg" alt="Avatar" style="width:100%">
+                    <div class="container-fluid">
+                      <h4><b>Tartarughe</b></h4>
+                    </div>
+                  </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                    <img src="https://arcaplanet.vtexassets.com/assets/vtex.file-manager-graphql/images/3638d42f-f748-4223-8885-5d9c53442aaa___89705bd797fc4b72e001799c8f2973e9.jpg" alt="Avatar" style="width:100%">
+                    <div class="container-fluid">
+                      <h4><b>Rettili</b></h4>
+                    </div>
+                  </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                    <img src="https://arcaplanet.vtexassets.com/assets/vtex.file-manager-graphql/images/3dfd5a2f-d86f-4111-81c7-de2225ff2822___c5c6b1341c847b1aecff9d9577ba6400.jpg" alt="Avatar" style="width:100%">
+                    <div class="container-fluid">
+                      <h4><b>Roditori</b></h4>
+                    </div>
+                  </div>
+              </div>
+            </div>
+          </div>
+<ol></ol>
+<center>
+<img src="images/banner.jpg" alt="no image!">
+</center>
+
     </div>
+<ol></ol>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
