--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section class="home">
     </section>
-    <div style="height: 1000px">
+    <div style="height: 680px">
 <ol></ol>
     <h1 style="text-align:center;">Categorie</h1>
 
@@ -105,6 +105,68 @@
     </div>
 <ol></ol>
 
+<center>
+<div class="text-center">
+  <h1><strong>Prodotti in evidenza</strong></h1>
+</div>
+<div class="container">
+<div class="row">
+  <div class="col">
+    <div class="card" style="width: 35rem;">
+      <img src="images/lettiera vegetale.webp" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h2 class="card-title">Lettiera Vegetale</h2>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card" style="width: 35rem;">
+      <img src="images/dog adult.webp" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h2 class="card-title">Virtus Dog Adult Rustic</h2>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card" style="width: 35rem;">
+      <img src="images/tonnetto e salmone.webp" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h2 class="card-title">Cibo per gatti tonnetto e salmone</h2>
+      </div>
+    </div>
+  </div>
+</div>
+<h1>
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀<ol></ol>⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+</h1>
+<div class="row">
+  <div class="col">
+    <div class="card" style="width: 35rem;">
+      <img src="images/lettiera.webp" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h2 class="card-title">Cat Lettiera Extra Clumping</h2>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card" style="width: 35rem;">
+      <img src="/images/tappetini.webp" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h2 class="card-title">Tappetini Igienici 60X90cm</h2>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card" style="width: 35rem;">
+      <img src="/images/perfect-gatto-lettiera-silicio.webp" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h2 class="card-title">Lettiera Silicio per Gatti</h2>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</center>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/scripts.js"></script>
