--- a/index2.html
+++ b/index2.html
@@ -42,7 +42,7 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/canciotoa.jpg" class="d-block w-100" alt="...">
+            <img src="images/image-zac/img2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="images/cancolusso.jpg" class="d-block w-100" alt="...">
