--- a/index.html
+++ b/index.html
@@ -60,8 +60,32 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-
-    <h1>Hello, world!</h1>
+      <!-- CARD INIZIO -->
+      <div class="card-group">
+        <div class="card">
+          <img src="images/image-zac/imgcibo2.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Cibo per cani</h5>
+            <p class="card-text">Acquista cibo di ottima qaulità solo sda noi</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Lavaggio per tuoi animali</h5>
+            <p class="card-text">Pulizia completa per far tornare a splendere il tuo raggio di sole</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Giochi per cani</h5>
+            <p class="card-text">Acquista giochi per far divertire i tuoi animali</p>
+          </div>
+        </div>
+      </div>
+      <!-- CARD FINE -->
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
