--- a/index.html
+++ b/index.html
@@ -60,8 +60,35 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+          <!--fine carosel inizo tab-->
+          <div class="card-group">
+            <div class="card">
+              <img src="images/canciotoa.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">cibo per animali</h5>
+                <p class="card-text">acquista cibi di buona qualità solo da noi </p>
+                <p class="card-text"><small class="text-muted">AFFRETTATI!</small></p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/lavacan.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">lava il tuo cane e gatto</h5>
+                <p class="card-text">lava il tuo cane da noi contatta il numero qui sotto per prenotare il tuo lavaggio </p>
+                <p class="card-text"><small class="text-muted">370 888 5288</small></p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/cancolusso.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Giochi per i tuoi pet!</h5>
+                <p class="card-text">fai divertire il tuo pet comprando il gioco che gli piace qui da noi </p>
+                <p class="card-text"><small class="text-muted">scopri tutti i giochi </small></p>
+              </div>
+            </div>
+          </div>
 
-    <h1>Hello, world!</h1>
+   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
