--- a/index.html
+++ b/index.html
@@ -60,14 +60,10 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-<<<<<<< HEAD
-=======
-
->>>>>>> 58fda98a282acbeb350ad29dad3ad9fe088a0c9e
           <!--fine carosel inizo tab-->
-          <div class="card-group">
+          <div class="card-group"class="conteiner">
             <div class="card">
-              <img src="images/canciotoa.jpg" class="card-img-top" alt="...">
+              <img src="images/cibo.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">cibo per animali</h5>
                 <p class="card-text">acquista cibi di buona qualità solo da noi </p>
@@ -75,7 +71,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="images/lavacan.jpg" class="card-img-top" alt="...">
+              <img src="images/canelavato.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">lava il tuo cane e gatto</h5>
                 <p class="card-text">lava il tuo cane da noi contatta il numero qui sotto per prenotare il tuo lavaggio </p>
@@ -83,12 +79,26 @@
               </div>
             </div>
             <div class="card">
-              <img src="images/cancolusso.jpg" class="card-img-top" alt="...">
+              <img src="images/giochi.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Giochi per i tuoi pet!</h5>
                 <p class="card-text">fai divertire il tuo pet comprando il gioco che gli piace qui da noi </p>
                 <p class="card-text"><small class="text-muted">scopri tutti i giochi </small></p>
               </div>
+            </div>
+          </div>
+          <!--inizo info -->
+          <div class="row g-0 bg-light position-relative">
+            <div class="col-md-6 mb-md-0 p-md-4">
+              <img src="..." class="w-100" alt="...">
+            </div>
+            <div class="col-md-6 p-4 ps-md-0">
+              <h5 class="mt-0">INFORMAZIONI SUL NOSTRO NEGOZIO</h5>
+              <p>Nel nostro negozio di articoli per animali vendiamo cibo,</P>
+              <P>giochi e offriamo un servizio di pulizia dove laviamo il tuo animale da compagnia </p>
+              <p class="fs-2">ORARI</p>
+              <p>aperti dal lunedì al venerdi dalle 9.00 alle 18.00</p>
+              <a href="#" class="stretched-link">Go somewhere</a>
             </div>
           </div>
 
