--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!--NAVBAR -->
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
         <a class="navbar-brand" href="#">Petshop</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,13 +42,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/image-zac/img2.jpg" class="d-block w-100" alt="...">
+            <img src="https://assets.vtex.app/unsafe/fit-in/1324x530/center/middle/https%3A%2F%2Farcaplanet.vtexassets.com%2Fassets%2Fvtex.file-manager-graphql%2Fimages%2Fb520100a-a784-4cd6-8026-7e03da667d0d___4997a4bf25464a2222d3ef4c938f8932.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="images/cancolusso.jpg" class="d-block w-100" alt="...">
+            <img src="https://assets.vtex.app/unsafe/fit-in/1324x530/center/middle/https%3A%2F%2Farcaplanet.vtexassets.com%2Fassets%2Fvtex.file-manager-graphql%2Fimages%2F865c02f9-782f-402d-bf60-f1f0c4e10304___da254a2c6c38efe9f3e2ca50f57e0ced.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="images/lavacan.jpg" class="d-block w-100" alt="...">
+            <img src="images/imgcarouselfine2.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -60,34 +60,51 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-
-      <!-- CARD INIZIO -->
-      <div class="card-group">
-        <div class="card">
-          <img src="images/image-zac/imgcibo2.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Cibo per cani</h5>
-            <p class="card-text">Acquista cibo di ottima qaulità solo sda noi</p>
+      <!--fine carosel inizo tab-->
+      <div class="container">
+        <div class="card-group"class="conteiner">
+          <div class="card">
+            <img src="images/cibo.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">cibo per animali</h5>
+              <p class="card-text">acquista cibi di buona qualità solo da noi </p>
+              <p class="card-text"><small class="text-muted">AFFRETTATI!</small></p>
+            </div>
           </div>
-        </div>
-        <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Lavaggio per tuoi animali</h5>
-            <p class="card-text">Pulizia completa per far tornare a splendere il tuo raggio di sole</p>
+          <div class="card">
+            <img src="images/canelavato.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">lava il tuo cane e gatto</h5>
+              <p class="card-text">lava il tuo cane da noi contatta il numero qui sotto per prenotare il tuo lavaggio </p>
+              <p class="card-text"><small class="text-muted">370 888 5288</small></p>
+            </div>
           </div>
-        </div>
-        <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Giochi per cani</h5>
-            <p class="card-text">Acquista giochi per far divertire i tuoi animali</p>
+          <div class="card">
+            <img src="images/giochi.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Giochi per i tuoi pet!</h5>
+              <p class="card-text">fai divertire il tuo pet comprando il gioco che gli piace qui da noi </p>
+              <p class="card-text"><small class="text-muted">scopri tutti i giochi </small></p>
+            </div>
           </div>
         </div>
       </div>
-      <!-- CARD FINE -->
-
-    <h1>Hello, world!</h1>
+      <!--inizo info -->
+      <div class="container">
+        <div class="row g-0 bg-light position-relative">
+          <div class="col-md-6 mb-md-0 p-md-4">
+            <img src="images/zoo.jpg" class="w-100" alt="...">
+          </div>
+          <div class="col-md-6 p-4 ps-md-0">
+            <h5 class="mt-0">INFORMAZIONI SUL NOSTRO NEGOZIO</h5>
+            <p>Nel nostro negozio di articoli per animali vendiamo cibo,</P>
+            <P>giochi e offriamo un servizio di pulizia dove laviamo il tuo animale da compagnia </p>
+            <p class="fs-2">ORARI</p>
+            <p>aperti dal lunedì al venerdi dalle 9.00 alle 18.00</p>
+            <a href="#" class="stretched-link">Go somewhere</a>
+          </div>
+        </div>
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
