--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href="css/main.css" rel="stylesheet" >
   </head>
   <body>
+    <body background ="images/b.jpg"></body>
+                
+            
     <!--NAVBAR -->
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
@@ -60,48 +63,51 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-          <!--fine carosel inizo tab-->
-          <div class="card-group"class="conteiner">
-            <div class="card">
-              <img src="images/cibo.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">cibo per animali</h5>
-                <p class="card-text">acquista cibi di buona qualità solo da noi </p>
-                <p class="card-text"><small class="text-muted">AFFRETTATI!</small></p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="images/canelavato.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">lava il tuo cane e gatto</h5>
-                <p class="card-text">lava il tuo cane da noi contatta il numero qui sotto per prenotare il tuo lavaggio </p>
-                <p class="card-text"><small class="text-muted">370 888 5288</small></p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="images/giochi.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Giochi per i tuoi pet!</h5>
-                <p class="card-text">fai divertire il tuo pet comprando il gioco che gli piace qui da noi </p>
-                <p class="card-text"><small class="text-muted">scopri tutti i giochi </small></p>
-              </div>
+      <!--fine carosel inizo tab-->
+      <div class="container">
+        <div class="card-group"class="conteiner">
+          <div class="card">
+            <img src="images/cibo.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">cibo per animali</h5>
+              <p class="card-text">acquista cibi di buona qualità solo da noi </p>
+              <p class="card-text"><small class="text-muted">AFFRETTATI!</small></p>
             </div>
           </div>
-          <!--inizo info -->
-          <div class="row g-0 bg-light position-relative">
-            <div class="col-md-6 mb-md-0 p-md-4">
-              <img src="..." class="w-100" alt="...">
-            </div>
-            <div class="col-md-6 p-4 ps-md-0">
-              <h5 class="mt-0">INFORMAZIONI SUL NOSTRO NEGOZIO</h5>
-              <p>Nel nostro negozio di articoli per animali vendiamo cibo,</P>
-              <P>giochi e offriamo un servizio di pulizia dove laviamo il tuo animale da compagnia </p>
-              <p class="fs-2">ORARI</p>
-              <p>aperti dal lunedì al venerdi dalle 9.00 alle 18.00</p>
-              <a href="#" class="stretched-link">Go somewhere</a>
+          <div class="card">
+            <img src="images/canelavato.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">lava il tuo cane e gatto</h5>
+              <p class="card-text">lava il tuo cane da noi contatta il numero qui sotto per prenotare il tuo lavaggio </p>
+              <p class="card-text"><small class="text-muted">370 888 5288</small></p>
             </div>
           </div>
-
+          <div class="card">
+            <img src="images/giochi.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Giochi per i tuoi pet!</h5>
+              <p class="card-text">fai divertire il tuo pet comprando il gioco che gli piace qui da noi </p>
+              <p class="card-text"><small class="text-muted">scopri tutti i giochi </small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--inizo info -->
+      <div class="container">
+        <div class="row g-0 bg-light position-relative">
+          <div class="col-md-6 mb-md-0 p-md-4">
+            <img src="images/zoo.jpg" class="w-100" alt="...">
+          </div>
+          <div class="col-md-6 p-4 ps-md-0">
+            <h5 class="mt-0">INFORMAZIONI SUL NOSTRO NEGOZIO</h5>
+            <p>Nel nostro negozio di articoli per animali vendiamo cibo,</P>
+            <P>giochi e offriamo un servizio di pulizia dove laviamo il tuo animale da compagnia </p>
+            <p class="fs-2">ORARI</p>
+            <p>aperti dal lunedì al venerdi dalle 9.00 alle 18.00</p>
+            <a href="#" class="stretched-link">Go somewhere</a>
+          </div>
+        </div>
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
