--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="css/main.css" rel="stylesheet" >
   </head>
   <body>
-    <body background ="images/b.jpg"></body>
+    <body background ="images/istockphoto-856678994-612x612.jpg"></body>
                 
             
     <!--NAVBAR -->
