--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="gmaps.js"></script>
   </head>
   <body>
-    <body background ="images/istockphoto-856678994-612x612.jpg"></body>
+    <body background ="images/bg_con_ombra.jpg"></body>
                 
             
     <!--NAVBAR -->
@@ -111,17 +111,18 @@
           </div>
         </div>
       </div>
-
-      <div class="row g-0 bg-light position-relative">
-        <div class="col-md-6 mb-md-0 p-md-4">
-          <iframe src="https://www.google.com/maps/embed?........." frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div>
-        <div class="col-md-6 p-4 ps-md-0">
-          <h5 class="mt-0">Columns with stretched link</h5>
-          <p>Another instance of placeholder content for this other custom component. It is intended to mimic what some real-world content would look like, and we're using it here to give the component a bit of body and size.</p>
-          <a href="#" class="stretched-link">Go somewhere</a>
-        </div>
-      </div> 
+      <div class="container">
+        <div class="row g-0 bg-light position-relative">
+          <div class="col-md-6 mb-md-0 p-md-4">
+            <iframe src="https://www.google.com/maps/embed?........." frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+          <div class="col-md-6 p-4 ps-md-0">
+            <h5 class="mt-0">Columns with stretched link</h5>
+            <p>Another instance of placeholder content for this other custom component. It is intended to mimic what some real-world content would look like, and we're using it here to give the component a bit of body and size.</p>
+            <a href="#" class="stretched-link">Go somewhere</a>
+          </div>
+        </div> 
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
