--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>petcan</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link href="css/main.css" rel="stylesheet" >
+    <link href="css/main2.css" rel="stylesheet" >
   </head>
   <body>
     <body background ="images/bg_con_ombra.jpg"></body>
@@ -112,5 +112,72 @@
         <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <div id="footer" class="container-fluid">
+      <div id="paddingfooter">
+        <div id="footer" class="row">
+          <div class="col">
+            <h4 id="h4footer">ABOUT KAWASAKI</h4>
+            <div class="row">
+              <div class="col">
+                <p>Kawasaki History</p>
+                <p>Kawasaki Companies</p>
+                <p>International Sites</p>
+              </div>
+              <div class="col">
+                <p>Kawasaki Technology</p>
+                <p>Legal Policies</p>
+                <p>Corporate Careers</p>
+                <p>Manufacturing Careers</p>
+                <p>Transparency In Coverage</p>
+              </div>
+            </div>       
+          </div>
+          <div class="col">
+            <h4 id="h4footer">RESOURCES</h4>
+            <div class="row">
+              <div class="col">
+                <p>Corporate Contact Info</p>
+                <p>Kawasaki Support</p>
+                <p>Safety Resources</p>
+              </div>
+              <div class="col">
+                <p>Racing Contingency</p>
+                <p>Industry Links</p>
+              </div>
+            </div>      
+          </div>
+          <div class="col">
+            <h4 id="h4footer">STAY CONNECTED</h4>
+            <p>Receive the latest news, special offers and exclusives.</p>
+            <button id="subscribe" type="button" class="btn btn-success">Subscribe</button>
+            <p>Manage Subscription Preferences</p>
+          </div>
+        </div>
+        <div id="footer" class="row">
+          <div class="col-4">
+            <h4 id="h4footer">NEWS</h4>
+            <div class="row">
+              <div class="col">
+                <p>Awards & Reviews</p>
+                <p>Press Releases</p>
+                <p>Recalls</p>
+              </div>
+              <div class="col">
+                <p>Events</p>
+              </div>
+            </div>       
+          </div>
+          <div class="col-4">
+            <h4 id="h4footer">DEALER INFO</h4>
+            <div class="row">
+              <div class="col">
+                <p>Dealer Locator</p>
+                <p>Become a Dealer</p>
+              </div>
+            </div>      
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
