--- a/index2.html
+++ b/index2.html
@@ -116,67 +116,41 @@
       <div id="paddingfooter">
         <div id="footer" class="row">
           <div class="col">
-            <h4 id="h4footer">ABOUT KAWASAKI</h4>
+            <h4 id="h4footer">PET-SHOP</h4> 
             <div class="row">
-              <div class="col">
-                <p>Kawasaki History</p>
-                <p>Kawasaki Companies</p>
-                <p>International Sites</p>
-              </div>
-              <div class="col">
-                <p>Kawasaki Technology</p>
-                <p>Legal Policies</p>
-                <p>Corporate Careers</p>
-                <p>Manufacturing Careers</p>
-                <p>Transparency In Coverage</p>
+              <div id="textfoot" class="col">
+                <p>Identitá e valori</p>
+                <p>Azienda</p>
+                <p>Unisciti a noi</p>
+                <p>Persone</p>
+                <p>La nostra Academy</p>
+                <p>Il percorso di selezione</p>
+                <p>Magazine</p>
+                <p>News e media</p>
+                <p>Brand esclusivi</p>
               </div>
             </div>       
           </div>
-          <div class="col">
-            <h4 id="h4footer">RESOURCES</h4>
+          <div id="textfoot" class="col">
+            <h4 id="h4footer">NEGOZI</h4>
             <div class="row">
               <div class="col">
-                <p>Corporate Contact Info</p>
-                <p>Kawasaki Support</p>
-                <p>Safety Resources</p>
-              </div>
-              <div class="col">
-                <p>Racing Contingency</p>
-                <p>Industry Links</p>
+                <p>Pet store Arcaplanet</p>
+                <p>Tour virtuale</p>
+                <p>Ordina e ritira</p>
+                <p>Servizi esclusivi</p>
+                <p>Trova negozio</p>
+                <p>Eventi</p>
               </div>
             </div>      
           </div>
-          <div class="col">
+          <div id="textfoot" class="col">
             <h4 id="h4footer">STAY CONNECTED</h4>
-            <p>Receive the latest news, special offers and exclusives.</p>
+            <p>Ricevi le ultime notizie, offerte speciali ed esclusive.</p>
             <button id="subscribe" type="button" class="btn btn-success">Subscribe</button>
-            <p>Manage Subscription Preferences</p>
           </div>
         </div>
-        <div id="footer" class="row">
-          <div class="col-4">
-            <h4 id="h4footer">NEWS</h4>
-            <div class="row">
-              <div class="col">
-                <p>Awards & Reviews</p>
-                <p>Press Releases</p>
-                <p>Recalls</p>
-              </div>
-              <div class="col">
-                <p>Events</p>
-              </div>
-            </div>       
-          </div>
-          <div class="col-4">
-            <h4 id="h4footer">DEALER INFO</h4>
-            <div class="row">
-              <div class="col">
-                <p>Dealer Locator</p>
-                <p>Become a Dealer</p>
-              </div>
-            </div>      
-          </div>
-        </div>
+    
       </div>
     </div>
   </body>
